# ShellAnything

./: .editorconfig  .gitignore  .gitmodules  AUTHORS  CHANGES  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  LICENSE.h  README.md  TODO.txt  UserManual.md  appveyor.yml  demo.xml  desktop.ini  library_names.txt
src/: Action.cpp  ActionClipboard.cpp  ActionExecute.cpp  ActionFile.cpp  ActionMessage.cpp  ActionOpen.cpp  ActionPrompt.cpp  ActionProperty.cpp  ActionStop.cpp  BitmapCache.cpp  BitmapCache.h  CMakeLists.txt  ConfigManager.cpp  Configuration.cpp  Context.cpp  DefaultSettings.cpp  Defaults.cpp  DriveClass.cpp  DriveClass.h  ErrorManager.cpp  ErrorManager.h  FileMagic.cpp  FileMagic.h  FileMagicManager.cpp  FileMagicManager.h  GlogUtils.cpp  GlogUtils.h  Icon.cpp  InputBox.cpp  InputBox.h  Item.cpp  Menu.cpp  Node.cpp  NodeFactory.cpp  ObjectFactory.cpp  ObjectFactory.h  Platform.cpp  Platform.h  PropertyManager.cpp  PropertyManager.h  (+42 more)
src/DebugArgumentsConsole/: CMakeLists.txt  main.cpp
src/DebugArgumentsWindow/: CMakeLists.txt  arguments.cpp
src/api/: CMakeLists.txt  sa.api.def  sa_action.cpp  sa_cfgmgr.cpp  sa_configuration.cpp  sa_context.cpp  sa_error.cpp  sa_icon.cpp  sa_logging.cpp  sa_memory.cpp  sa_menu.cpp  sa_plugin.cpp  sa_plugins.cpp  sa_private_casting.cpp  sa_private_casting.h  sa_properties.cpp  sa_property_store.cpp  sa_selection_context.cpp  sa_string.cpp  sa_string_private.cpp  sa_string_private.h  sa_types_private.cpp  sa_types_private.h  sa_update_context.cpp  sa_validator.cpp  sa_xml.cpp
src/arguments.debugger.console/: CMakeLists.txt  main.cpp  showargs.rc
src/arguments.debugger.window/: CMakeLists.txt  gui.cpp  resource.h  showargs.rc
src/core/: Action.cpp  Action.h  ActionClipboard.cpp  ActionClipboard.h  ActionExecute.cpp  ActionExecute.h  ActionFile.cpp  ActionFile.h  ActionManager.cpp  ActionManager.h  ActionMessage.cpp  ActionMessage.h  ActionOpen.cpp  ActionOpen.h  ActionPrompt.cpp  ActionPrompt.h  ActionProperty.cpp  ActionProperty.h  ActionStop.cpp  ActionStop.h  App.cpp  App.h  BaseAction.cpp  BaseAction.h  CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  ConfigManager.cpp  ConfigManager.h  Configuration.cpp  Configuration.h  ConsoleLoggerService.cpp  ConsoleLoggerService.h  Context.cpp  Context.h  DefaultSettings.cpp  DefaultSettings.h  DriveClass.cpp  DriveClass.h  Enums.h  (+74 more)
src/debug_arguments/: How to Create a Multiline Edit Control - Win32 apps - Microsoft Learn.url  Walkthrough- Create a traditional Windows Desktop application (C++) - Microsoft Learn.url  gui.cpp  showargs.sln  showargs.vcxproj  showargs.vcxproj.filters
src/debug_arguments_window/: CMakeLists.txt  arguments.h
src/file_explorer_renew/: CMakeLists.txt  file_explorer.cpp  file_explorer.h  framework.h  main.cpp  main.h  resource.h  resource.rc  targetver.h  user_feedback.cpp  user_feedback.h
src/flat-color-icons/: CMakeLists.txt  dllmain.cpp  flat-color-icons.url  resource.h  resource.rc.in
src/libexprtk/: CMakeLists.txt  libexprtk.cpp  libexprtk.def  libexprtk.h
src/refresh_file_explorer/: CMakeLists.txt  file_explorer.cpp  file_explorer.h  main.cpp  main.cpp.old  resource.h  user.cpp  user.h  user_feedback.h
src/shared/: BitmapCache.cpp  BitmapCache.h  CMakeLists.txt  GlogUtils.cpp  GlogUtils.h  SaUtils.cpp  SaUtils.h  Win32Registry.cpp  Win32Registry.h  Win32Utils.cpp  Win32Utils.h
src/shellextension/: CClassFactory.cpp  CClassFactory.h  CContextMenu.cpp  CContextMenu.h  CCriticalSection.cpp  CCriticalSection.h  CMakeLists.txt  Reg.cpp  TypeLibHelper.cpp  TypeLibHelper.h  dllmain.cpp  logger_stub.h  reg.cpp  resource.h  shellext.cpp  shellext.def  shellext.h  shellext.idl  shellext.rgs  stdafx.h  utils.cpp  utils.h
src/tests/: ArgumentsHandler.cpp  ArgumentsHandler.h  CMakeLists.txt  LockFile.cpp  LockFile.h  QuickLoader.cpp  QuickLoader.h  TestActionExecute.cpp  TestActionExecute.h  TestActionFile.cpp  TestActionFile.h  TestActionProperty.cpp  TestActionProperty.h  TestActionStop.cpp  TestActionStop.h  TestBitmapCache.cpp  TestBitmapCache.h  TestConfigManager.cpp  TestConfigManager.h  TestConfiguration.cpp  TestConfiguration.h  TestContext.cpp  TestDemoSamples.cpp  TestDemoSamples.h  TestEnvironment.cpp  TestEnvironment.h  TestGlogUtils.cpp  TestGlogUtils.h  TestIObject.cpp  TestIObject.h  TestIcon.cpp  TestIcon.h  TestInputBox.cpp  TestInputBox.h  TestKeyboardService.cpp  TestKeyboardService.h  TestLibExprtk.cpp  TestLibExprtk.h  TestLoggerHelper.cpp  TestLoggerHelper.h  (+39 more)
src/windows/: CMakeLists.txt  ClipboardService.cpp  ClipboardService.h  KeyboardService.cpp  KeyboardService.h  LegacyIconResolutionService.cpp  LegacyIconResolutionService.h  RegistryService.cpp  RegistryService.h  Win32Clipboard.h  WindowsClipboardService.cpp  WindowsClipboardService.h  WindowsIconResolutionService.cpp  WindowsIconResolutionService.h  WindowsKeyboardService.cpp  WindowsKeyboardService.h  WindowsProcessLauncherService.cpp  WindowsProcessLauncherService.h  WindowsRegistryService.cpp  WindowsRegistryService.h  dllmain.cpp
test/: ArgumentsHandler.cpp  ArgumentsHandler.h  CMakeLists.txt  TestActionExecute.cpp  TestActionExecute.h  TestActionFile.cpp  TestActionProperty.cpp  TestActionProperty.h  TestActionStop.cpp  TestBitmapCache.cpp  TestBitmapCache.h  TestConfigManager.cpp  TestConfigManager.h  TestConfiguration.cpp  TestContext.cpp  TestContext.h  TestDemoSamples.cpp  TestGlogUtils.cpp  TestIcon.cpp  TestIcon.h  TestInputBox.cpp  TestInputBox.h  TestItem.cpp  TestItem.h  TestLibEval.cpp  TestLibEval.h  TestLibExprtk.cpp  TestMenu.cpp  TestMenu.h  TestNode.cpp  TestNode.h  TestObjectFactory.cpp  TestPlatform.cpp  TestPropertyManager.cpp  TestShellExtension.cpp  TestShellExtension.h  TestString.cpp  TestString.h  TestUnicode.cpp  TestUnicode.h  (+14 more)
test/test_files/: Microsoft Office 2007.xml  Microsoft Office 2010.xml  Microsoft Office 2016.xml  TestConfigManager.testAssignCommandId.1.xml  TestConfigManager.testAssignCommandId.2.xml  TestConfigManager.testDetectNewFile.xml  TestConfigManager.testFileModifications.xml  WinDirStat.xml  (+12 more)
(+229 files in other folders)
